plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'nu.studer.jooq' version '10.0'
}

group = 'com.arjunakankipati'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.5.0'
    implementation 'org.springframework.boot:spring-boot-starter-jooq:3.5.0'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.5.0'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'org.postgresql:postgresql:42.7.7'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    jooqGenerator 'org.postgresql:postgresql:42.7.7'
}

tasks.named('test') {
	useJUnitPlatform()
}

jooq {
    version = '3.19.23'
    configurations {
        main {
            generationTool {
                jdbc {
                    driver = 'org.postgresql.Driver'
                    url = 'jdbc:postgresql://localhost:5432/statsdb'
                    user = 'postgres'
                    password = 'stats'
                }
                generator {
                    name = 'org.jooq.codegen.DefaultGenerator'
                    database {
                        name = 'org.jooq.meta.postgres.PostgresDatabase'
                        includes = ".*"
                        excludes = ""
                        inputSchema = 'public'
                    }
                    target {
                        packageName = 'com.arjunakankipati.racingstatanalysis.jooq'
                        directory = 'src/main/java/jooq'
                    }
                    strategy.name = 'org.jooq.codegen.DefaultGeneratorStrategy'
                }
            }
        }
    }
}
